# nrp-invenio-client

./: .copyright.tmpl  .gitignore  .pdm-python  README.md  build_api_doc.sh  generate_synchronous_client.sh  pyproject.toml  ruff.toml  run-tests.sh
.github/workflows/: build.yaml
docs/: api.md  conf.py  example.md  index.rst
invenio_nrp/: __init__.py  converter.py  editor_test.py  generic.py  info.py  shortcuts.py
invenio_nrp/cli/: __init__.py  base.py  cli.py  repositories.py  variables.py
invenio_nrp/cli/files/: __init__.py  download.py  list.py  table_formatters.py  update.py  upload.py
invenio_nrp/cli/records/: __init__.py  create.py  download.py  get.py  (+5 more)
invenio_nrp/client/: __init__.py  deserialize.py  doi.py  errors.py  rdm.py
invenio_nrp/config/: __init__.py  config.py  info.py  repository.py  variables.py
invenio_nrp/types/: __init__.py  base.py  converter.py  info.py  yarl_url.py
src/nrp_invenio_client/: base.py  records.py  requests.py
tests/: conftest.py  test_configuration_classes.py
tests/async_tests/: conftest.py  test_async_crud.py  test_async_file_structuring.py  test_async_files.py  test_async_generic_types.py  test_async_info.py  test_async_parallel_files.py  test_async_record_list.py  test_async_requests.py
tests/cmdline/: conftest.py  test_record_crud.py  test_repository_commands.py
tests/sync_tests/: conftest.py  test_sync_crud.py  test_sync_file_structuring.py  test_sync_files.py  test_sync_generic_types.py  test_sync_info.py  test_sync_record_list.py  test_sync_requests.py
tests/test-repository/: oarepo.yaml  simple.yaml
(+104 files in other folders)
